# craft-tool

./: README.md  документация.rtf
CraftTool/: CMakeLists.txt  config.cfg
CraftTool/resources/: qt_res.qrc  version.rc
CraftTool/src/: AutoLockCS.h  CRemoteDevice.cpp  ComPortConnect.cpp  ComPortConnect.h  Config.cpp  Config.h  Coords.h  CraftTool.pro  GCodeFrameParser.cpp  GCodeFrameParser.h  GCodeInterpreter.cpp  GCodeInterpreter.h  GCodeInterpreterDefines.h  GCodeLexer.cpp  GCodeLexer.h  IPortToDevice.h  IRemoteDevice.h  LogConsole.cpp  LogConsole.h  Packets.h  RemoteDevice.cpp  RemoteDevice.h  RemoteDeviceInterface.h  StatusBar.cpp  StatusBar.h  StdAfx.h  UniversalConnection.cpp  UniversalConnection.h  config_defines.h  float16.h  log.cpp  log.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene3d.cpp  scene3d.h
CraftTool/tests/: mini_all_move.nc  mini_quad.nc  s&h.nc  star.nc  star_2.nc  star_3.nc  test.nc  test_6.nc  test_aembos.nc  test_circle.nc  test_circle_2.nc  test_circle_3.nc  test_circle_4.nc  test_circle_and_a.nc  test_coord_sys.nc  test_cycle.nc  test_cycle_preproc.nc  test_fast.nc  test_feed_mode.nc  test_g32_sync_linear.nc  test_g81.nc  test_incremental.nc  test_line.nc  test_linking.nc  test_linking_2.nc  test_lion.nc  test_pix1.nc  test_pix2.nc  test_quad.nc  test_rand.nc  test_screw.nc  test_screw_mini.nc  test_step.nc  test_sync.nc  test_x.nc  test_y.nc  test_z.nc
STM32_CNC/: Packs_Target 1.htm  STM32_CNC.uvgui.adMin  STM32_CNC.uvguix.adMin  STM32_CNC.uvopt  STM32_CNC.uvoptx  STM32_CNC.uvprojx  STM32_CNC_Target 1.dep  USART_module.h  adc.h  common.h  cos_table.cpp  discretization.h  feed.h  fifo.h  float16.h  gpio.h  gpio_use.h  hal_0.h  inertial.h  led.h  limit_switch.h  main.cpp  motor.h  mover.h  packets.h  receiver.h  run.bat  spindle.h  stm32f100c_map.ioc  sys_timer.h  system.h  task.h  task_move.h  usart_test.ini
STM32_CNC/RTE/: RTE_Components.h
STM32_CNC/coocox/: STM32F407ZGTx_FLASH.ld  cnc_device.coproj  main.c
STM32_CNC/coocox/Inc/: stm32f4xx_hal_conf.h
STM32_CNC/coocox/Src/: system_stm32f4xx.c
STM32_CNC/coocox/src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_CNC/hardware/: stm32f100_pwm.lay  stm32f100rbt_map.ioc  stm32f407.ioc
controller/: common.h  executor.h  feed.h  led.h  pwm.h  run.bat  task_wait.h  usart.h
controller/arduino/esp32/: build_opt_example.h  esp32.ino
controller/coocox/: STM32F407ZGTx_FLASH.ld  cnc_device.coproj
controller/hardware/: esp32.txt  stm32f407.ioc
controller/src/: discretization.h  executor.h  feed.h  fifo.h  inertial.h  limit_switch.h  main.cpp  main.h  motor.h  packets.h  pwm.h  receiver.h  spindle.h  task_empty.h  task_move.h  track.h
(+18 files in other folders)
